--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
